# Walnut-CMake-Template

./: .gitmodules  CMakeLists.txt  README.md
include/: Constants.hpp  Walnut.h
src/: CMakeLists.txt  Main.cpp
